fix: use absolute path for deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy and Restart App
+      - name: Debug and Deploy
         run: |
-          # 1. 確実にアプリのフォルダへ移動
+          echo "--- Current Directory ---"
+          pwd
+          
+          echo "--- Checking File Location ---"
+          # app.pyがどこにあるか探す
+          find . -name "app.py"
+          
+          echo "--- Attempting to Start ---"
           cd /home/nattu/book_maneger/bag
           
-          # 2. 最新コードを反映
-          git pull origin main
+          # 以前のプロセスを確実に殺す（-9で強制終了）
+          pkill -9 -f app.py || true
           
-          # 3. 古いFlaskを止める
-          pkill -f app.py || true
+          # 起動して、もしエラーが出たら即座に表示させる
+          # nohupを使わずに一度普通に実行してログに残るか試す
+          python3 app.py > flask.log 2>&1 &
           
-          # 4. バックグラウンドで起動してログを保存
-          nohup python3 app.py > flask.log 2>&1 &
+          # 3秒待ってからログの中身を表示
+          sleep 3
+          cat flask.log
