--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,17 +13,18 @@ jobs:
 
       - name: Deploy and Restart App
         run: |
-          cd /home/nattu/book_maneger/bag
-          
-          # 1. 以前のプログラムを完全に停止
+          # 1. 確実に古いアプリを全滅させる
           pkill -9 -f app.py || true
           
-          # 2. 最新コードを反映
+          # 2. フォルダへ移動
+          cd /home/nattu/book_maneger/bag
+          
+          # 3. GitHubから最新版を取得
           git pull origin main || true
           
-          # 3. バックグラウンド起動
-          export FLASK_DEBUG=0
-          nohup python3 app.py > flask.log 2>&1 &
+          # 4. フルパスでバックグラウンド起動！
+          # 出力先もフルパスにすることで、迷子を防ぎます
+          nohup /usr/bin/python3 /home/nattu/book_maneger/bag/app.py > /home/nattu/book_maneger/bag/flask.log 2>&1 &
           
-          # 4. 起動を少し待ってから終了
-          sleep 2
+          # 5. 起動を3秒待つ
+          sleep 3
