--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,19 @@ jobs:
 
       - name: Deploy and Restart App
         run: |
-          # 1. 確実に古いアプリを全滅させる
+          # 1. 今動いている Flask を完全に止める
           pkill -9 -f app.py || true
           
           # 2. フォルダへ移動
           cd /home/nattu/book_maneger/bag
           
-          # 3. GitHubから最新版を取得
+          # 3. GitHub から最新版を取得
           git pull origin main || true
           
-          # 4. フルパスでバックグラウンド起動！
-          # 出力先もフルパスにすることで、迷子を防ぎます
-          nohup /usr/bin/python3 /home/nattu/book_maneger/bag/app.py > /home/nattu/book_maneger/bag/flask.log 2>&1 &
+          # 4. 「切り離して」起動する
+          # () と & を組み合わせることで、ロボットが帰った後もアプリを残します
+          (nohup python3 app.py > flask.log 2>&1 &)
           
-          # 5. 起動を3秒待つ
-          sleep 3
+          # 5. 起動を確認するために少し待つ
+          sleep 5
+          cat flask.log
